--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>bookmyshow</title>
+    <link rel="stylesheet" href="./bookbyshow.css">
 </head>
 <body>
-    
+    <div class="main">
+        <div class="header"></div>
+        <div class="nav"></div>
+        <div class="recommended-movies"></div>
+        <div class="ad-panel"></div>
+        <div class="live-events"></div>
+    </div>
 </body>
 </html>
