--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BookMyShow</title>
+    <link rel="stylesheet" href="./bookbyshow.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="main">
@@ -12,13 +14,21 @@
             <div class="logo-search">
                 <img src="./BookMyShow/BookMyShow_id_NUAGErP_2.png" alt="BookMyShow">
                 <div class="search">
-                    <i></i>
+                    
                     <input type="text" placeholder="Search movies,podcast,music and more">
                 </div>
             </div>
 
             <div class="loc-sign-menu">
-                
+                <select name="city" id="city">
+                    <option value="bng">Bengaluru</option>
+                    <option value="kochi">kochi</option>
+                    <option value="kolkata">kolkata</option>
+                    <option value="delhi">delhi</option>
+                    <option value="mumbai">mumbai</option>
+                </select>
+                <button>Signin</button>
+                <i class="fa-solid fa-bars"></i>
 
             </div>
         </div>
