add nav bar section

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <div class="main">
+
+        <!-- -------------HEADER SECTION------------------------- -->
         <div class="header">
 
             <div class="logo-search">
                 <img src="./BookMyShow/BookMyShow_id_NUAGErP_2.png" alt="BookMyShow">
                 <div class="search">
-                    
                     <input type="text" placeholder="Search movies,podcast,music and more">
                 </div>
             </div>
@@ -30,6 +31,25 @@
                 <button>Signin</button>
                 <i class="fa-solid fa-bars"></i>
 
+            </div>
+        </div>
+        <!-- -----------------END OF HEADER SECTION------------------------- -->
+       
+        <!-- -----------------START OF NAV------------------------------------- -->
+        <div class="nav">
+            <div class="nav-option">
+                <a href="">movies</a>
+                <a href="">Stream</a>
+                <a href="">Events</a>
+                <a href="">Plays</a>
+                <a href="">Sports</a>
+                <a href="">Ativities</a>
+            </div>
+            <div class="nav-offers">
+                <a href="">ListYourShow</a>
+                <a href="">Corporates</a>
+                <a href="">Offers</a>
+                <a href="">Gift Cards</a>
             </div>
         </div>
     </div>
