add recommened movies section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main">
 
-        <!-- -------------HEADER SECTION------------------------- -->
+        <!-- ----------------- HEADER SECTION ------------------------- -->
         <div class="header">
 
             <div class="logo-search">
@@ -50,6 +50,26 @@
                 <a href="">Corporates</a>
                 <a href="">Offers</a>
                 <a href="">Gift Cards</a>
+            </div>
+        </div>
+        <!-- ----------------- END OF NAV ------------------------------------- -->
+        
+        <!-----------------------START OF RECOMENDED MOVIES------------------------->
+        <div class="recommended-movies">
+            <div class="recommended-movies-main">
+                <div class="recommended-movies-header">
+                    <span>
+                        <h2>Recommended Moveis</h2>
+                    </span>
+                    <a href="">see all</a>
+                </div>
+                <div class="recommended-movies-body">
+                    <div class="cards"></div>
+                    <div class="cards"></div>
+                    <div class="cards"></div>
+                    <div class="cards"></div>
+                    <div class="cards"></div>
+                </div>
             </div>
         </div>
     </div>
