add cards layout in cards-main

--- a/index.html
+++ b/index.html
@@ -58,17 +58,19 @@
         <div class="recommended-movies">
             <div class="recommended-movies-main">
                 <div class="recommended-movies-header">
-                    <span>
+                    <div>
                         <h2>Recommended Moveis</h2>
-                    </span>
-                    <a href="">see all</a>
+                    </div>
+                    <a href="">see all ></a>
                 </div>
                 <div class="recommended-movies-body">
-                    <div class="cards"></div>
-                    <div class="cards"></div>
-                    <div class="cards"></div>
-                    <div class="cards"></div>
-                    <div class="cards"></div>
+                    <div class="cards-main">
+                        <div class="cards"></div>
+                        <div class="cards"></div>
+                        <div class="cards"></div>
+                        <div class="cards"></div>
+                        <div class="cards"></div>
+                    </div>
                 </div>
             </div>
         </div>
