add cards templete

--- a/index.html
+++ b/index.html
@@ -65,11 +65,22 @@
                 </div>
                 <div class="recommended-movies-body">
                     <div class="cards-main">
-                        <div class="cards"></div>
-                        <div class="cards"></div>
-                        <div class="cards"></div>
-                        <div class="cards"></div>
-                        <div class="cards"></div>
+                        <div class="cards">
+                            <div class="movie-banner">
+                                <img src="./card images/images.jpeg" alt="yuva">
+                            </div>
+                            <div class="movie-rating">
+                                <i class="fa-solid fa-star" style="color: #f84464;"></i>
+                                <p>8.2/10 8.4k votings</p>
+                            </div>
+                            <div class="movie-title">
+                                <h3>Yuva</h3>
+                            </div>
+                            <div class="movie-genres">
+                                <h3>Action/Drama</h3>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
