--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <a href="">Gift Cards</a>
             </div>
         </div>
+        <hr>
         <!-- ----------------- END OF NAV ------------------------------------- -->
         
         <!-----------------------START OF RECOMENDED MOVIES------------------------->
@@ -63,8 +64,57 @@
                     </div>
                     <a href="">see all ></a>
                 </div>
+
                 <div class="recommended-movies-body">
                     <div class="cards-main">
+                        <div class="cards">
+                            <div class="movie-banner">
+                                <img src="./card images/images.jpeg" alt="yuva">
+                            </div>
+                            <div class="movie-rating">
+                                <i class="fa-solid fa-star" style="color: #f84464;"></i>
+                                <p>8.2/10 8.4k votings</p>
+                            </div>
+                            <div class="movie-title">
+                                <h3>Yuva</h3>
+                            </div>
+                            <div class="movie-genres">
+                                <h3>Action/Drama</h3>
+                            </div>
+                        </div>
+
+                        <div class="cards">
+                            <div class="movie-banner">
+                                <img src="./card images/images.jpeg" alt="yuva">
+                            </div>
+                            <div class="movie-rating">
+                                <i class="fa-solid fa-star" style="color: #f84464;"></i>
+                                <p>8.2/10 8.4k votings</p>
+                            </div>
+                            <div class="movie-title">
+                                <h3>Yuva</h3>
+                            </div>
+                            <div class="movie-genres">
+                                <h3>Action/Drama</h3>
+                            </div>
+                        </div>
+
+                        <div class="cards">
+                            <div class="movie-banner">
+                                <img src="./card images/images.jpeg" alt="yuva">
+                            </div>
+                            <div class="movie-rating">
+                                <i class="fa-solid fa-star" style="color: #f84464;"></i>
+                                <p>8.2/10 8.4k votings</p>
+                            </div>
+                            <div class="movie-title">
+                                <h3>Yuva</h3>
+                            </div>
+                            <div class="movie-genres">
+                                <h3>Action/Drama</h3>
+                            </div>
+                        </div>
+
                         <div class="cards">
                             <div class="movie-banner">
                                 <img src="./card images/images.jpeg" alt="yuva">
