--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BookMyShow</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Average+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./bookbyshow.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -51,7 +54,7 @@
             <div class="nav-body">
 
                 <div class="nav-option">
-                    <a href="">movies</a>
+                    <a href="">Movies</a>
                     <a href="">Stream</a>
                     <a href="">Events</a>
                     <a href="">Plays</a>
@@ -81,16 +84,16 @@
             <div class="recommended-movies-body">
 
 
-                <div class="recommended-movies-header">
+                <div class="recommended-movies-title">
 
                     <div>
-                        <h2>Recommended Moveis</h2>
+                        <h2>Recommended Movies</h2>
                     </div>
                     <a href="">see all ></a>
 
                 </div>
 
-                <div class="recommended-movies-body">
+                <div class="recommended-movies-cards">
 
                     <div class="cards-main">
 
