create div for stream banner

--- a/index.html
+++ b/index.html
@@ -197,6 +197,17 @@
 
 
         </div>
+        <!-----------------------  END OF RECOMENDED MOVIES  ------------------------->
+
+        <!-----------------------  START OF STREAM ------------------------->
+        <div class="stream-banner">
+
+            <div class="stream-banner-body">
+                <img src="./BookMyShow/stream-banner.jpeg" alt="">
+            </div>
+
+        </div>
+        
     </div>
 </body>
 </html>
