add strem banner

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </div>
         <!-----------------------  END OF RECOMENDED MOVIES  ------------------------->
 
-        <!-----------------------  START OF STREAM ------------------------->
+        <!-----------------------  START OF STREAM BANNER------------------------->
         <div class="stream-banner">
 
             <div class="stream-banner-body">
@@ -207,7 +207,7 @@
             </div>
 
         </div>
-        
+        <!-----------------------  END OF STREAM BANNER------------------------->
     </div>
 </body>
 </html>
