added  primiere banner section

--- a/index.html
+++ b/index.html
@@ -274,30 +274,58 @@
         <!-----------------------  START OF PRIMIERE ------------------------->
 
         <div class="primiere">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, laborum optio ullam in perspiciatis sequi, eligendi assumenda recusandae mollitia nobis voluptates quibusdam odit nisi dolorum vitae dolore laboriosam eaque. Non.
-            Eaque quasi neque eius consequuntur distinctio minus laboriosam excepturi earum perspiciatis, a expedita id soluta tempora exercitationem molestiae, esse temporibus recusandae architecto? Expedita nihil consequuntur perspiciatis quia necessitatibus repudiandae quisquam.
-            Nesciunt doloribus optio magni ratione pariatur autem illo? Eos voluptates qui molestiae minus repellendus excepturi libero modi, est quae facere vel consequatur. Neque, nam earum! Molestias sapiente consequuntur dicta facere.
-            Consequatur quis inventore facilis minus voluptatibus sunt numquam! Reiciendis ex hic cupiditate quaerat dolorum deleniti voluptatum recusandae aliquam, at aperiam consequatur maxime doloribus eum, cum porro quis eligendi beatae neque.
-            Consequatur voluptatum vero, eos minus aperiam fuga nemo rem animi, ut facilis doloremque beatae incidunt placeat aliquid tempora. Quo totam deleniti sequi maxime quidem. Rem ea laborum quam minima cupiditate!
-            Facilis ut consectetur atque possimus illo adipisci sunt dolore ullam voluptate eum veniam odit, nulla voluptates necessitatibus inventore qui aut nobis autem id commodi! Nam asperiores reiciendis ipsa iusto. A!
-            Animi nam officiis quia dicta repudiandae ipsa iusto praesentium temporibus ea error eum corrupti aut laudantium facilis dolore, quod, quas officia similique quae sit molestiae illum at soluta! Earum, nam.
-            Placeat illo officiis nostrum? Odit quis dicta in est, odio veritatis rerum modi placeat blanditiis? Quos, laborum eum inventore deleniti, quam necessitatibus libero deserunt commodi magnam corrupti harum impedit quod.
-            Mollitia minus numquam fugit natus quae in alias voluptatum dolor quam maxime. Repellat molestiae, facere saepe pariatur reprehenderit nemo dolorum quaerat possimus. Ad vel et, eum neque quasi commodi maxime.
-            Nobis doloribus esse, sint distinctio, repellendus omnis officiis perferendis, excepturi enim minima libero veritatis. Doloribus, libero qui ab ipsa omnis amet! Magni quos maxime, optio repudiandae dicta vitae mollitia natus.
-            Nihil neque deserunt ab earum animi reiciendis minima, odit quibusdam perspiciatis sequi. Quibusdam beatae quo ipsum iusto doloribus sapiente. Itaque delectus asperiores cumque dolor quasi! Sunt, doloribus! Voluptas, minus soluta!
-            Possimus officia voluptas impedit quas quaerat perferendis aperiam numquam molestiae, necessitatibus sequi recusandae voluptatum quae dicta explicabo nulla nihil sed officiis esse inventore aliquam rerum quos. Unde commodi et ipsam?
-            Accusamus nesciunt aspernatur, quia ratione et fuga dolorem asperiores enim, nostrum itaque quibusdam nihil quam error animi pariatur commodi nisi ab illo quae odio mollitia saepe, quaerat maxime. Cum, ratione.
-            Ab illum tenetur animi magni! Iure, voluptatibus animi deserunt dolore porro possimus aspernatur pariatur aliquid exercitationem, nobis corporis ipsam totam nisi itaque eum, quo autem nam debitis eligendi doloremque facilis?
-            Sequi enim unde eum aperiam reprehenderit voluptatibus illo, possimus exercitationem, ea mollitia, dolorum labore earum laudantium! Possimus quos similique temporibus quam? A necessitatibus temporibus perspiciatis repudiandae vero assumenda, cupiditate fuga?
-            Reiciendis voluptate nostrum maxime fugit deleniti labore inventore modi nesciunt quae. Ab, alias rem. Quidem ullam aliquam optio error maxime non cupiditate animi aperiam, sunt deleniti repellat reprehenderit est odio.
-            Autem commodi ea id dolorum, quam iusto dolor quaerat minima sed impedit nostrum nam harum inventore porro laborum molestias libero. Soluta reiciendis deleniti neque exercitationem dicta maxime officiis? Ex, vero.
-            Quidem excepturi odit, vero iure consequatur, sit, necessitatibus corporis cumque saepe tenetur similique accusamus consectetur culpa quaerat odio inventore error facilis qui ipsam cum nisi. Saepe sunt possimus numquam nulla.
-            Tempora, fugit rerum quis quidem quia saepe, ullam cum eius repudiandae architecto quaerat illum ratione incidunt, cumque ab sapiente unde optio. Hic ipsam doloribus nisi, at perferendis dicta voluptatum similique.
-            Nobis, quo deleniti nam, error facere eius aspernatur odio saepe non laboriosam quidem voluptatum magnam est? Recusandae officiis, rerum, ad est temporibus blanditiis voluptatem vero rem optio vitae quae harum.
-            Dolores hic repudiandae est sed pariatur dolorum cumque architecto ipsum. Vitae sequi aliquam magnam, hic, qui dolor, odio quis repudiandae porro sunt sint fugiat impedit ullam distinctio. Perferendis, similique in.
-            Est quas sunt iusto veniam veritatis accusantium ipsam vel autem? Dignissimos harum optio reiciendis eveniet dolor, voluptas alias corrupti labore facere eius sed iste facilis deleniti quam tenetur. Ea, adipisci!
-            Porro tempore doloremque rerum, sunt, esse cupiditate architecto eius sapiente vero cum doloribus quis quas quae aperiam fugiat saepe facere omnis quia necessitatibus nobis quasi. Quaerat dolorum nulla aspernatur voluptates!
+
+            <div class="primiere-body">
+
+                <div class="p-banner">
+
+                    <a href=""> 
+                        <img src="./BookMyShow/premiere-banner.avif" alt="premiere">
+                    </a>
+                    
+                </div>
+
+            </div>
+
         </div>
+
+        <!-----------------------  END OF PRIMIERE ------------------------->
+
+
+        <!-----------------------  START OF PRIMIERE-CARDS ------------------------->
+
+        <div class="primiere-cards">
+            <div class="primiere-cards-body">
+                <div class="primiere-cards-title">
+                    <h3>Preimieres</h3>
+                    <p>Brand new release every Friday</p>
+                </div>
+            </div>
+        </div>
+
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quas, ad pariatur similique ex, vel vitae sint natus totam qui eos. Expedita, numquam labore. Ipsam neque repellendus dignissimos animi harum.
+        Recusandae, doloremque eius ut iste officia placeat ratione, quos nihil aspernatur sed dolorem, quam quis. Repellat id, sequi alias fugit ipsum vitae, quos libero ea labore doloremque, nemo quia cumque.
+        Odit neque amet, nemo nihil repellat doloremque veritatis tempora ducimus quia iusto aspernatur libero distinctio explicabo sed! Dolor at dignissimos magni, nihil exercitationem dolores amet alias? Iste numquam rerum eius.
+        Similique quo dolorem exercitationem explicabo rerum, aliquam temporibus, corrupti eius illo eum vel quaerat totam praesentium dolorum nostrum provident possimus necessitatibus commodi vitae laudantium quod deleniti repellendus? Sed, molestiae minima.
+        Aspernatur ipsa consequuntur provident nobis sunt neque possimus fugiat laudantium, earum dolorum odio tenetur perspiciatis nemo tempora vero nostrum pariatur nam magnam alias accusantium officia deserunt commodi? Iure, rem culpa.
+        Molestias, aut! Odit aliquid, ea suscipit atque aperiam commodi corporis quod unde cupiditate vitae laboriosam voluptatem reiciendis ipsum, ad nostrum quas quidem magni dolorem optio molestiae porro excepturi quasi laudantium.
+        Voluptas sapiente illum iste error libero nemo, ducimus voluptates provident perferendis deserunt amet unde esse in, asperiores sequi dolorum eos expedita natus commodi est inventore veniam? Deserunt officiis saepe nesciunt.
+        Esse, similique. Consequatur porro, nihil numquam iure tempora autem aliquam eligendi inventore dolorem sint dolor enim corrupti sapiente ratione consequuntur necessitatibus architecto nemo! Sunt exercitationem, labore debitis sequi cum dicta.
+        Molestias impedit, accusantium voluptates rerum delectus vitae perferendis tempora vel voluptatibus minus odit magni, hic ullam, sed animi molestiae culpa nam corporis? In vitae quos iure? Eveniet quo ea nostrum!
+        Sunt dolores iste omnis laudantium reiciendis temporibus excepturi provident, distinctio quos consectetur eius cumque est eum officiis quod dolore molestiae blanditiis? Soluta ex laborum est nostrum sapiente sunt adipisci maiores!
+        Culpa animi, suscipit optio velit fugit dicta labore delectus id nulla quam deserunt quas voluptatem quaerat eveniet. Quia, sed omnis veniam beatae autem, numquam excepturi aperiam optio mollitia in accusamus!
+        Sequi deleniti vero exercitationem! Harum magnam vero cupiditate eos cum placeat ea atque, eligendi adipisci quisquam exercitationem, voluptatem tempore maxime debitis ex! Dolores repudiandae sint officiis unde vero rerum eligendi.
+        Nam, laborum autem! Ipsa neque dolorum sit commodi doloremque laudantium nobis labore, quibusdam corporis expedita ex dolore vel. Illum tempore aliquam delectus maiores rerum autem ipsum alias odit facilis nemo!
+        Eligendi quod quae illo, blanditiis eius esse nemo fuga amet, sit vero similique incidunt reiciendis accusamus suscipit. Unde porro sed et similique error consequatur asperiores, consectetur, nihil aliquam eligendi numquam!
+        Aliquid aliquam magnam debitis accusantium eveniet minus placeat eligendi dolorem, saepe cum dolores nemo quam similique maxime aspernatur incidunt ut consequuntur laboriosam officiis. Consectetur repudiandae unde dolor odit non architecto.
+        Ex repellat distinctio reiciendis dolores aut sed similique, incidunt molestias laboriosam dicta numquam totam et rem exercitationem ut, maiores laudantium odio optio porro repellendus? Esse sunt veniam inventore reprehenderit voluptatibus?
+        Corporis voluptatem incidunt laudantium dicta assumenda, autem voluptas alias culpa quidem officiis nisi? Cupiditate earum ullam minima rem? Iusto magnam cumque fugit perferendis adipisci assumenda accusantium cum quisquam sed possimus.
+        Numquam, fugit iusto, tempora, maiores esse tenetur quam incidunt dolore qui quaerat earum totam quod similique sint. In voluptatem alias velit nulla? Temporibus tenetur amet dolorem corporis aut praesentium veritatis.
+        Est officiis eos illo molestias recusandae expedita obcaecati provident nobis perferendis tempora? Consectetur architecto, voluptates nemo illum at, dolores cum laborum dolore assumenda quos ab libero esse voluptas perferendis tempora!
+        Perferendis magni ratione veniam officia doloribus recusandae laudantium nulla debitis, deserunt consectetur voluptatem corporis facere mollitia illum. Maxime recusandae ipsam corporis! Iusto mollitia a quasi fugiat porro dolorem aspernatur distinctio!
+        Ut pariatur iure cum consequuntur autem hic, necessitatibus facilis aut vero reprehenderit vitae, voluptas natus. Fugit architecto animi dolores necessitatibus rem veritatis ipsa vero eius. Dolore nihil quo omnis assumenda.
+
+
     </div>
 </body>
 </html>
