add primiere layout

--- a/index.html
+++ b/index.html
@@ -300,6 +300,10 @@
                     <h3>Preimieres</h3>
                     <p>Brand new release every Friday</p>
                 </div>
+
+                <div class="primiere-cards">
+                    
+                </div>
             </div>
         </div>
 
